# fides

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  ISSUES.md  MANIFEST.in  Makefile  README.md  RESEARCH.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
dlz/: analyze.py  batch.py  cli.py  io_util.py  io_wav.py  process.py  report.py  verify.py
dlz/profiles/: string_quartet.json
fides/: __init__.py  analyze.py  cli.py  debleed.py  gui.py  io_wav.py  pipeline.py  plan.py  process.py  reference.py  report.py  space.py  visualize.py
fides/profiles/: violin_solo.json
scripts/: deliver.sh  gen_ir.py  gui_shot.py  make_spectrum.py  provision.sh  provision_p2.sh  smoke.py  smoke2.py  smoke3.py  smoke4.py  smoke5.py  test_gui.py  test_ir.py
tests/: test_analyze.py  test_io.py  test_pipeline.py  test_process.py  test_space.py  test_visualize.py
