[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fides"
version = "0.2.0"
description = "Auto-mastering transparent pour cordes classiques (violon solo, petites formations)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "DLZ Creator" }]
keywords = ["mastering", "audio", "classical", "violin", "loudness", "ebu-r128"]
dependencies = [
  "numpy",
  "scipy",
  "soundfile",
  "pyloudnorm",
  "pedalboard",
  "noisereduce",
  "ffmpeg-normalize",
]

[project.optional-dependencies]
match = ["matchering"]
debleed = ["demucs", "torch", "torchaudio"]
gui = ["tkinterdnd2"]
dev = ["pytest"]

[project.scripts]
fides = "fides.cli:main"
fides-gui = "fides.gui:main"

[tool.setuptools]
packages = ["fides"]

[tool.setuptools.package-data]
fides = ["profiles/*.json", "ir/*.wav"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
